--- a/electronica/diodo.html
+++ b/electronica/diodo.html
@@ -46,13 +46,23 @@
                 <h2>Funcionamiento del Diodo</h2>
                 <p>Para comprender mejor el funcionamiento del diodo, podemos compararlo con una válvula en un sistema de tuberías de agua. En la dirección correcta, la válvula permite que el agua fluya libremente, mientras que en la dirección opuesta, bloquea el flujo de agua. De manera similar, el diodo actúa como una "válvula eléctrica" que controla el flujo de electrones.</p>
                 <p>Cuando se aplica una tensión positiva en el ánodo (la región P) y una tensión negativa en el cátodo (la región N), se crea un camino conductivo para los electrones, y el diodo se enciende, permitiendo que la corriente fluya. En la dirección opuesta, el diodo se apaga y bloquea la corriente eléctrica.</p>
+                <h2>Características</h2>
+                <ul>
+                    <li><marcador class="resaltado6">Tensión inversa máxima (Vrmax):</marcador> Es la máxima tensión que el diodo puede soportar en la dirección inversa (polarización inversa) sin sufrir daños. Asegúrate de que la tensión inversa máxima del diodo sea mayor o igual que la tensión máxima en tu circuito.</li>
+                    <li><marcador class="resaltado6">Corriente directa máxima (If max):</marcador> Es la máxima corriente continua que el diodo puede conducir en la dirección directa (polarización directa) sin sufrir daños. Asegúrate de que la corriente directa máxima sea adecuada para tu aplicación.</li>
+                    <li><marcador class="resaltado6">Tiempos de conmutación: </marcador> Los diodos tienen tiempos de conmutación, que son los tiempos que tardan en cambiar entre el estado de conducción y el estado de corte. Estos tiempos son importantes en aplicaciones de alta frecuencia. Busca diodos con tiempos de conmutación adecuados para tu aplicación.</li>
+                    <li><marcador class="resaltado6">Potencia disipada (Pd): </marcador> La potencia disipada es la energía que se disipa en forma de calor cuando el diodo conduce corriente. Debes asegurarte de que el diodo pueda manejar la potencia disipada sin sobrecalentarse. Calcula la potencia disipada utilizando la ley de Ohm (P = I²R).</li>
+                    <li><marcador class="resaltado6">Tolerancia de la tensión directa (Vf):</marcador> Algunos diodos, como los diodos Zener, tienen una tolerancia en la tensión directa que emiten cuando están polarizados en directa. Asegúrate de que la tolerancia sea adecuada para tu aplicación si estás utilizando un diodo Zener.</li>
+                    <li><marcador class="resaltado6">Capacidad de corriente de pico (Ifsm):</marcador> La capacidad de corriente de pico es la máxima corriente que un diodo puede conducir durante un corto período de tiempo sin sufrir daños. Es importante en aplicaciones donde se pueden producir picos de corriente, como en la protección contra sobretensiones.</li>
+                    <li><marcador class="resaltado6">Factor de forma y encapsulado: </marcador> El factor de forma del diodo y su encapsulado son importantes para la integración en tu diseño. Asegúrate de que el diodo se adapte físicamente a tu aplicación y a tu placa de circuito.</li>
+                </ul>        
                 <h2>Aplicaciones de los Diodos</h2>
                 <p>Los diodos se encuentran en una amplia variedad de dispositivos electrónicos y aplicaciones. Algunas de sus aplicaciones más comunes incluyen:</p>
                 <ul>
-                    <li><marcador class="resaltado9">Rectificación:</marcador> Los diodos se utilizan para convertir corriente alterna (CA) en corriente continua (CC) en fuentes de alimentación y cargadores.</li>
-                    <li><marcador class="resaltado9">Protección contra polaridad inversa:</marcador> Se utilizan para evitar daños a los dispositivos electrónicos al prevenir la inversión accidental de la polaridad de la tensión de alimentación.</li>
-                    <li><marcador class="resaltado9">Modulación de señal:</marcador> Los diodos se utilizan en aplicaciones de modulación, como la modulación en amplitud (AM) y la modulación en frecuencia (FM) en radiocomunicaciones.</li>
-                    <li><marcador class="resaltado9">Circuitos de conmutación:</marcador> Los diodos se utilizan en circuitos de conmutación para proteger componentes sensibles y direccionar el flujo de corriente en momentos específicos.</li>
+                    <li><marcador class="resaltado8">Rectificación:</marcador> Los diodos se utilizan para convertir corriente alterna (CA) en corriente continua (CC) en fuentes de alimentación y cargadores.</li>
+                    <li><marcador class="resaltado8">Protección contra polaridad inversa:</marcador> Se utilizan para evitar daños a los dispositivos electrónicos al prevenir la inversión accidental de la polaridad de la tensión de alimentación.</li>
+                    <li><marcador class="resaltado8">Modulación de señal:</marcador> Los diodos se utilizan en aplicaciones de modulación, como la modulación en amplitud (AM) y la modulación en frecuencia (FM) en radiocomunicaciones.</li>
+                    <li><marcador class="resaltado8">Circuitos de conmutación:</marcador> Los diodos se utilizan en circuitos de conmutación para proteger componentes sensibles y direccionar el flujo de corriente en momentos específicos.</li>
                 </ul>
                 <h2>Tipos de Diodos</h2>
                 <p>Existen varios tipos de diodos, cada uno diseñado para aplicaciones específicas. Algunos de los tipos más comunes incluyen:</p>
