--- a/electronica/inductancia.html
+++ b/electronica/inductancia.html
@@ -54,10 +54,23 @@
                 </div>
                 <br>
                 <h2>Características</h2>
+                
+                
                 <ul>
-                    <li><marcador class="resaltado6">Fórmula para inductancia de un inductor con núcleo de hierro o ferrita:</marcador> Si el inductor tiene un núcleo de material ferromagnético (como hierro o ferrita), la fórmula para calcular la inductancia es más compleja y depende de la geometría del núcleo. En este caso, se utilizan ecuaciones específicas y tablas de datos proporcionados por los fabricantes de inductores o herramientas de diseño de inductores disponibles en línea.</li>
-                    <li><marcador class="resaltado6">Simulación y software de diseño:</marcador> Para inductores más complejos con núcleos específicos o diseños personalizados, a menudo es necesario recurrir a simulaciones con software de diseño de inductores. Estas herramientas de software pueden proporcionar resultados más precisos y tener en cuenta factores como la reluctancia del núcleo, la saturación magnética y otros efectos no lineales.</li>
-                    <li><marcador class="resaltado6">Valores estándar:</marcador> En la práctica, los inductores comerciales están disponibles en valores estándar de inductancia, y es posible seleccionar uno que se ajuste a las necesidades del diseño sin necesidad de calcularlo desde cero.</li>
+                    <li><marcador class="resaltado6">Corriente nominal (Ir):</marcador> La corriente nominal es la corriente máxima continua que el inductor puede soportar sin saturarse. Asegúrate de que la corriente nominal del inductor sea adecuada para tu aplicación y que no se exceda.</li>
+                    <li><marcador class="resaltado6">Resistencia de DC (R):</marcador> Los inductores tienen una resistencia de DC que disipa energía en forma de calor cuando pasa corriente a través de ellos. Minimiza la resistencia de DC si necesitas que el inductor tenga una alta eficiencia.</li>
+                    <li><marcador class="resaltado6">Tolerancia de inductancia:</marcador>  Al igual que con otros componentes, los inductores pueden tener una tolerancia en su valor de inductancia. Asegúrate de que la tolerancia sea adecuada para tu aplicación si es crítica.</li>
+                    <li><marcador class="resaltado6">Frecuencia de operación:</marcador> La frecuencia de operación es importante al seleccionar un inductor, especialmente en aplicaciones de alta frecuencia. Algunos inductores están diseñados para trabajar mejor en ciertos rangos de frecuencia.</li>
+                    <li><marcador class="resaltado6">Factor de calidad (Q):</marcador> El factor de calidad es una medida de la eficiencia de un inductor y se relaciona con la relación entre la energía almacenada y la energía disipada. Un inductor de alta calidad tendrá un Q alto.</li>
+                    <li><marcador class="resaltado6">Tipo de núcleo:</marcador> Los inductores pueden tener núcleos de ferrita, hierro, aire, entre otros materiales. El tipo de núcleo afectará las propiedades del inductor, como la inductancia y la resistencia. Selecciona el tipo de núcleo adecuado para tu aplicación.</li>
+                    <li><marcador class="resaltado6">Dimensiones y encapsulado:</marcador> Las dimensiones físicas y el encapsulado del inductor son importantes para la integración en tu diseño. Asegúrate de que el inductor se adapte al espacio disponible y a la placa de circuito.</li>
+                    <li><marcador class="resaltado6">Aplicación específica:</marcador> Determina si tu inductor se utilizará en aplicaciones de filtrado, almacenamiento de energía, reducción de ruido u otras aplicaciones específicas. Esto influirá en las especificaciones que debes buscar en un inductor.</li>
+                    <li><marcador class="resaltado6">Valor de inductancia (L):</marcador> El valor de inductancia es una medida de la capacidad del inductor para almacenar energía en forma de campo magnético cuando una corriente pasa a través de él. Debes seleccionar un inductor con el valor de inductancia adecuado para tu aplicación.</li>
+                    <ol>
+                        <li><marcador class="resaltado">Fórmula para inductancia de un inductor con núcleo de hierro o ferrita:</marcador> Si el inductor tiene un núcleo de material ferromagnético (como hierro o ferrita), la fórmula para calcular la inductancia es más compleja y depende de la geometría del núcleo. En este caso, se utilizan ecuaciones específicas y tablas de datos proporcionados por los fabricantes de inductores o herramientas de diseño de inductores disponibles en línea.</li>
+                        <li><marcador class="resaltado">Simulación y software de diseño:</marcador> Para inductores más complejos con núcleos específicos o diseños personalizados, a menudo es necesario recurrir a simulaciones con software de diseño de inductores. Estas herramientas de software pueden proporcionar resultados más precisos y tener en cuenta factores como la reluctancia del núcleo, la saturación magnética y otros efectos no lineales.</li>
+                        <li><marcador class="resaltado">Valores estándar:</marcador> En la práctica, los inductores comerciales están disponibles en valores estándar de inductancia, y es posible seleccionar uno que se ajuste a las necesidades del diseño sin necesidad de calcularlo desde cero.</li>
+                    </ol>
                 </ul>
                 <div class="blog-image-doble">
                     <img src="media/inductor5.jpg" alt="">
@@ -66,11 +79,11 @@
                 <h2>Aplicaciones</h2>
                 <p>Los inductores tienen una amplia gama de aplicaciones en la electrónica y otras áreas de la tecnología. Algunos usos comunes incluyen:</p>
                 <ul>
-                    <li><marcador class="resaltado9">Filtrado:</marcador> Se utilizan en circuitos de filtrado para bloquear o atenuar ciertas frecuencias y permitir el paso de otras.</li>
-                    <li><marcador class="resaltado9">Transformadores:</marcador> Los inductores con núcleo de hierro o ferrita se utilizan en transformadores para cambiar la tensión de una señal de corriente alterna.</li>
-                    <li><marcador class="resaltado9">Almacenamiento de Energía:</marcador> Los inductores se utilizan en aplicaciones de almacenamiento de energía, como en convertidores de potencia y sistemas de energía renovable.</li>
-                    <li><marcador class="resaltado9">Cancelación de Ruido:</marcador> Los inductores se emplean en circuitos de cancelación de ruido, especialmente en aplicaciones de audio y comunicaciones.</li>
-                    <li><marcador class="resaltado9">Antenas:</marcador> En la transmisión de señales inalámbricas, los inductores se utilizan en antenas para sintonizar la frecuencia de transmisión.</li>
+                    <li><marcador class="resaltado8">Filtrado:</marcador> Se utilizan en circuitos de filtrado para bloquear o atenuar ciertas frecuencias y permitir el paso de otras.</li>
+                    <li><marcador class="resaltado8">Transformadores:</marcador> Los inductores con núcleo de hierro o ferrita se utilizan en transformadores para cambiar la tensión de una señal de corriente alterna.</li>
+                    <li><marcador class="resaltado8">Almacenamiento de Energía:</marcador> Los inductores se utilizan en aplicaciones de almacenamiento de energía, como en convertidores de potencia y sistemas de energía renovable.</li>
+                    <li><marcador class="resaltado8">Cancelación de Ruido:</marcador> Los inductores se emplean en circuitos de cancelación de ruido, especialmente en aplicaciones de audio y comunicaciones.</li>
+                    <li><marcador class="resaltado8">Antenas:</marcador> En la transmisión de señales inalámbricas, los inductores se utilizan en antenas para sintonizar la frecuencia de transmisión.</li>
                 </ul>
                 <div class="blog-image-grande">
                     <img src="media/inductor3.jpg" alt="">
@@ -104,6 +117,7 @@
                 <br>    
                 <h5>Ejemplo de cálculo de inductancia:</h5>
                 <p>Encuentre la inductancia de una bobina de núcleo de aire con un diametro de la sección transversal de 4 mm, 100 vueltas y una longitud de 100 mm.</p>
+                <br>
                 <p>A = &#960;(2x10<sup>-3</sup>)<sup>2</sup> = 12.57x10<sup>-6</sup></p>
                 <p>L = \( \frac{N^{2} \mu A}{l} \)</p>
                 <p>L = \( \frac {(100)^{2}(4x10^{-7})(12.57x10^{-6})}{0.1} \)</p>
