--- a/electronica/calculo.html
+++ b/electronica/calculo.html
@@ -589,11 +589,14 @@
                 <p>Ángulo entre Z y R (ϕ<sub>impedancia</sub>):</p>
                 <p>ϕ<sub>impedancia</sub> = arccos(R / Z) = arccos(5 / 32.62) ≈ 81.18∘</p>
                 <p><marcador class="resaltado4">Potencia aparente (S):</marcador></p>
-                <p><marcador class="resaltado7">S = V * I = 10 * 0.31 ≈ 3.1 VA</marcador></p>
+                <p>S = V * I = 10 * 0.31</p>
+                <p><marcador class="resaltado7">S ≈ 3.1 VA</marcador></p>
                 <p><marcador class="resaltado4">Potencia reactiva (Q):</marcador></p>
-                <p><marcador class="resaltado7">Q = V * I * sin(ϕ<sub>impedancia</sub>) = 10 * 0.31 * sin(81.18) ≈ 3.1 VAR</marcador></p>
+                <p>Q = V * I * sin(ϕ<sub>impedancia</sub>)</p>
+                <p><marcador class="resaltado7">Q = 10 * 0.31 * sin(81.18) ≈ 3.1 VAR</marcador></p>
                 <p><marcador class="resaltado4">Potencia activa (P):</marcador></p>
-                <p><marcador class="resaltado7">P = V * I * cos(ϕ<sub>impedancia</sub>) = 10 * 0.31 * cos(81.18) ≈ 0.4753 W</marcador></p>
+                <p>P = V * I * cos(ϕ<sub>impedancia</sub>)</p>
+                <p><marcador class="resaltado7">P = 10 * 0.31 * cos(81.18) ≈ 0.4753 W</marcador></p>
                 <br>
                 <br>
                 <h2>Cálculo por números complejos</h2>
@@ -613,13 +616,16 @@
                 <p>I = (10 ∠0∘)/(32.625Ω ∠−81.238∘) ≈ 0.3065 ∠81.238∘ Amp</p>
                 <ul>
                     <li><marcador class="resaltado4">Voltaje en la resistencia:</li>
-                    <p><marcador class="resaltado7">VR = I × R ≈ 5 * 0.3065 ∠81.238∘ ≈ 1.53 ∠81.238∘ V</p>
+                    <p>VR = I × R ≈ 5 * 0.3065 ∠81.238∘</p>
+                    <p><marcador class="resaltado7">VR ≈ 1.53 ∠81.238∘ V</p>
                     <p>La inductancia al ser un número imaginario positivo, tiene 90 grados.</p>
                     <li><marcador class="resaltado4">Voltaje en la inductancia:</li>
-                    <p><marcador class="resaltado7">VXL = I × ωL = 31.42 ∠90∘ * 0.3065 ∠81.238∘ ≈ 9.63 ∠171.238∘ V</p>
+                    <p>VXL = I × ωL = 31.42 ∠90∘ * 0.3065 ∠81.238∘</p>
+                    <p><marcador class="resaltado7">VXL ≈ 9.63 ∠171.238∘ V</p>
                     <p>La capacitancia al ser un número imaginario negativo, tiene -90 grados.</p>
                     <li><marcador class="resaltado4">Voltaje en el capacitor:</li>
-                    <p><marcador class="resaltado7">VXC = I × 1/(ωC) = 63.66 ∠-90∘ * 0.3065 ∠81.238∘ ≈ 19.51 ∠-8.762∘ V</p>
+                    <p>VXC = I × 1/(ωC) = 63.66 ∠-90∘ * 0.3065 ∠81.238∘</p>
+                    <p><marcador class="resaltado7">VXC ≈ 19.51 ∠-8.762∘ V</p>
                 </ul>
                 <br>
                 <p>La potencia aparente S = VI se descompone en potencia activa P y potencia reactiva Q, utilizando el ángulo θ:</p>
