--- a/electronica/calculo.html
+++ b/electronica/calculo.html
@@ -629,7 +629,8 @@
                 </ul>
                 <br>
                 <p>La potencia aparente S = VI se descompone en potencia activa P y potencia reactiva Q, utilizando el ángulo θ:</p>
-                <p><marcador class="resaltado7">S = 10 ∠0∘ × (0.3065 ∠81.238∘) ≈ 3.065 ∠81.238∘ VA ≈ 0.467 + 3.03j</marcador></p>
+                <p>S = 10 ∠0∘ × (0.3065 ∠81.238∘)</p>
+                <p><marcador class="resaltado7">S = 3.065 ∠81.238∘ VA ≈ 0.467 + 3.03j</marcador></p>
                 <p>La potencia activa es la parte real y la imaginaria la potencia reactiva.</p>
                 <br>
                 <br>
