--- a/hacking/expresiones.html
+++ b/hacking/expresiones.html
@@ -52,6 +52,15 @@
                       <input type="text" class="text" value="grep 'linux' archivo.txt" oninput="ajustarAncho(this)">
                       <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
+                </div>   
+                <div class="contenedor">
+                    <div class="etiqueta">
+                        Busca las palabras que terminen en "sh" en un archivo
+                    </div>
+                    <div class="comandos">
+                      <input type="text" class="text" value="cat /etc/passwd | grep sh$" oninput="ajustarAncho(this)">
+                      <button><i class="fa fa-clone"></i><span> Copy</span></button>
+                    </div>
                 </div>              
                 <div class="contenedor">
                     <div class="etiqueta">
