--- a/hacking/linux.html
+++ b/hacking/linux.html
@@ -146,6 +146,16 @@
 
                 <div class="contenedor">
                   <div class="etiqueta">
+                    Muestra la ruta en la que nos encontramos.
+                  </div>
+                  <div class="comandos">
+                    <input type="text" class="text" value="pwd" oninput="ajustarAncho(this)">
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
+                  </div>
+                </div>
+
+                <div class="contenedor">
+                  <div class="etiqueta">
                     Escribe un texto dentro de un archivo.
                   </div>
                   <div class="comandos">
@@ -220,6 +230,16 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="cat archivo.txt" oninput="ajustarAncho(this)">
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
+                  </div>
+                </div>
+
+                <div class="contenedor">
+                  <div class="etiqueta">
+                    El comando <marcador class="subrayado">batcat</marcador> se utiliza para mostrar el contenido de un archivo en la terminal con formato (Puede que se necesite instalar antes <marcador class="subrayado">batcat</marcador>).
+                  </div>
+                  <div class="comandos">
+                    <input type="text" class="text" value="batcat --style plain --paging never archivo.php" oninput="ajustarAncho(this)">
                     <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
@@ -370,6 +390,16 @@
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="sudo su" oninput="ajustarAncho(this)">
+                    <button><i class="fa fa-clone"></i><span> Copy</span></button>
+                  </div>
+                </div>
+
+                <div class="contenedor">
+                  <div class="etiqueta">
+                    Determina la ubicación de un ejecutable específico en el sistema, en este caso, Python 3.
+                  </div>
+                  <div class="comandos">
+                    <input type="text" class="text" value="which python3" oninput="ajustarAncho(this)">
                     <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
