--- a/network.html
+++ b/network.html
@@ -84,7 +84,11 @@
         <div class="article-section">
             <img src="media/imagen2.png" alt="Dispositivos de Red" class="article-image">
             <h2><a href="network/red.html">Dispositivos de Red</a></h2>
-        </div> 
+        </div>
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="IPv6" class="article-image">
+            <h2><a href="network/ipv6.html">IPv6</a></h2>
+        </div>  
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
