--- a/hacking/archivos.html
+++ b/hacking/archivos.html
@@ -317,13 +317,23 @@
 <code>// Tu código aquí 
 function holaMundo() {
     console.log("Hola, mundo!");
-}</code>
-                        </pre>
+}</code></pre>
                     </div>
                 </div>
 -->
 
-
+ <!--
+<div class="contenedor">
+    <div class="etiqueta">
+        Muestra una lista de archivos y carpetas en el directorio actual.
+    </div>
+    <div class="comandos">
+      
+      <textarea class="text" oninput="ajustarAncho(this)">Get-NetTCPConnection | Select-Object -Property *,@{'Name' = 'ProcessName';'Expression'={(Get-Process -Id $_.OwningProcess).Name}}</textarea>
+      <button><i class="fa fa-clone"></i><span> Copy</span></button>
+    </div>
+</div>
+-->
             </div>   
     </main>
     <script src="../js/script.js"></script>
