--- a/hacking/windows.html
+++ b/hacking/windows.html
@@ -704,7 +704,7 @@
 
                 <h2>PowerShell</h2>
                 <p>PowerShell es una interfaz de línea de comandos más avanzada que CMD y proporciona una amplia gama de capacidades de administración y automatización en Windows. Combina la facilidad de uso de los comandos tradicionales con la capacidad de escribir scripts más complejos.</p>
-                <p>n su mayoría, los comandos de Command Prompt (Cmd) se pueden ejecutar en PowerShell, ya que PowerShell está diseñado para ser compatible con los comandos de Cmd para facilitar la transición y la interoperabilidad. Sin embargo, en PowerShell, también se pueden utilizar cmdlets específicos de PowerShell para realizar muchas de las mismas tareas de manera más eficiente y con mayor flexibilidad.</p>
+                <p>En su mayoría, los comandos de Command Prompt (Cmd) se pueden ejecutar en PowerShell, ya que PowerShell está diseñado para ser compatible con los comandos de Cmd para facilitar la transición y la interoperabilidad. Sin embargo, en PowerShell, también se pueden utilizar cmdlets específicos de PowerShell para realizar muchas de las mismas tareas de manera más eficiente y con mayor flexibilidad.</p>
                 
                 <div class="blog-image-grande">
                     <img src="media/windows2.jpg" alt="">
